# harmonia

./: .gitignore  CLAUDE.md  DASHBOARD_BUILD_SUMMARY.md  Makefile  README.md  alignment_comparison.html  harmonia.html  pyproject.toml  setup.sh
docs/: COMMERCIAL_LICENSING_AUDIT_2026_07_17.md  DIAGNOSTIC_DASHBOARD_GUIDE.md  DIAGNOSTIC_DASHBOARD_README.md  FINAL_DELIVERY_SUMMARY.txt  FINAL_PROJECT_STATE.txt  GUIDE_for_hands_on_use.md  INTEGRATION_GUIDE.md  MISSION_BILLBOARD_COMPLETION.md  MISSION_COMPLETION_GUIDE.md  PHASE_2_COMPLETION_ROADMAP.md  PHASE_2_STATUS.md  README_HARMONIA_UI_INTEGRATION.md  SESSION_PRESENTATION_2026_07_17.md  SESSION_SUMMARY.md  TESTING_QUICK_START.md  _bass_results.json  accomp_db_signal_analysis_2026-07-03.md  accompaniment_db_2026-07-03.md  adversarial_review_2026_07_17.md  annotation_sidecar_schema.md  app-shell.html  architecture_extensions.md  audio_chord_model_2026-07-05.md  audio_diversity_brainstorm.md  autumn_leaves_gt_fix_impact_analysis.md  bass_model_report.md  bayesian_family_combination_2026-07-04.md  billboard_integration_summary.md  billboard_retraining_findings.md  billboard_training_plan_SUMMARY.md  billboard_training_results_v2.md  billboard_translation_validation.md  bilstm_refine_2026-07-05.md  chord_ai_insights.txt  chord_ai_reverse_engineering.md  chord_boundary_diagnostics_2026_07_15.md  chord_change_detection_analysis.md  chord_change_engine_2026-07-06.md  chord_hierarchy_fix.md  chord_quality_report.json  (+87 more)
handoff 2/: HANDOFF.md  Harmonia App.dc.html  Harmonia Chart Viewer.dc.html  Harmonia Chord Editor.dc.html  Harmonia Import.dc.html  Harmonia Launcher.dc.html  Harmonia Re-infer.dc.html  harmonia_app_standalone.html
harmonia/: irealb_aligner.py  irealb_export.py  irealb_fetcher.py  pipeline.py  tab_aligner.py  tab_fetcher.py  tab_parser.py  tab_renderer.py
scratchpad/: _yesterday_chords.json  adaptive_percentile_on_ireal.py  adaptive_percentile_on_ireal_results.json  adaptive_proba.py  align_check_cached_results.json  align_download_results.json  auto_apply_merges.py  auto_apply_results.json  auto_tier_grain_comparison_results.json  bar_distance_matrix.py  bar_distance_matrix_all_of_me.json  bar_distance_matrix_aretha_chain_of_fools.json  bar_merge_candidates.py  bar_merge_candidates_inferred_abba_chiquitita_official_lyric_video.json  bar_merge_candidates_inferred_aretha_franklin_chain_of_fools_official_lyric_video.json  bar_merge_candidates_inferred_autumn_leaves.json  bar_merge_full_census_abba_chiquitita_official_lyric_video.json  bar_merge_full_census_aretha_franklin_chain_of_fools_official_lyric_video.json  bar_merge_full_census_autumn_leaves.json  bar_merge_game.html  bar_merge_game_data.json  bar_ssm_multigrain.py  bar_ssm_multigrain_all_of_me.json  bar_ssm_multigrain_aretha_chain_of_fools.json  bar_ssm_multigrain_viz.html  bar_ssm_rawchroma.py  bar_ssm_rawchroma_abba_chiquitita.json  bar_ssm_rawchroma_aretha_chain_of_fools.json  bar_ssm_viz.html  bargrid_debug_player.html  baseline_chords_abba_chiquitita_official_lyric_video.json  baseline_chords_aretha_franklin_chain_of_fools_official_lyric_video.json  baseline_chords_autumn_leaves.json  baseline_chords_extra_commodores_easy.json  (+303 more)
(+569 files in other folders)
