[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "harmonia"
version = "0.1.0"
description = "Hierarchical Bayesian chord and structure inference from audio"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "librosa>=0.10",
    "madmom>=0.16",
    "basic-pitch>=0.3",
    "music21>=9.1",
    "pretty_midi>=0.2.10",
    "numpyro>=0.14",
    "jax>=0.4",
    "jaxlib>=0.4",
    "torch>=2.2",
    "torchaudio>=2.2",
    "soundfile>=0.12",
    "mir_eval>=0.7",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "tqdm>=4.66",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
render = [
    "pyfluidsynth>=1.3",
]

[project.scripts]
harmonia = "harmonia.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["harmonia*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=harmonia --cov-report=term-missing"
